# copier-python-template

./: .gitignore  LICENSE  README.md  copier.yml  pyproject.toml
.github/workflows/: ci-checks.yml
template/: .gitignore  .pre-commit-config.yaml  README.md.jinja  pyproject.toml.jinja  {{ _copier_conf.answers_file }}.jinja
template/.github/workflows/: sync-copier.yaml
template/src/: main.py
template/tests/: test_dummy.py
tests/: test-repo-answers.yml  test_create_repo.py
